--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "main": ".open-next/worker.js",
-  "name": "interim",
+  "name": "v1.0",
   "compatibility_date": "2025-03-25",
   "compatibility_flags": [
     "nodejs_compat"
