--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,4 +1,12 @@
 {
+  "main": ".open-next/worker.js",
   "name": "v1",
-  "compatibility_date": "2025-03-25"
+  "compatibility_date": "2025-03-25",
+  "compatibility_flags": [
+    "nodejs_compat"
+  ],
+  "assets": {
+    "directory": ".open-next/assets",
+    "binding": "ASSETS"
+  }
 }
