--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "interim",
-  "version": "0.1.0",
+  "name": "@cirrica/marketingsite",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,7 +10,6 @@
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
-
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.1.0",
