--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",    
+    "build:worker": "opennextjs-cloudflare build",
+    "deploy:dev": "npm run build:worker && npx wrangler deploy --env dev",
+    "deploy:prod": "npm run build:worker && npx wrangler deploy --env prod",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
-
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.1.0",
