--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cirrica/marketingsite-dev",
+  "name": "@cirrica/marketingsite",
   "version": "1.0.0",
   "private": true,
   "scripts": {
