--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "marketingsite-dev",
+  "name": "marketingsite",
   "main": ".open-next/worker.js",
   "compatibility_date": "2025-06-07",
   "compatibility_flags": [
